--- a/public/404.html
+++ b/public/404.html
@@ -6,10 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Ultraviolet | Error</title>
+    <title>Shadow Unblocker | Error</title>
     <meta
       name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
+      content="Shadow Unblocker is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
     />
     <meta
       name="theme-color"
@@ -41,7 +41,7 @@
         style="margin-left: auto"
         >Credits</a
       >
-      <span>Ultraviolet &copy; TN 2022</span>
+      <span>Shadow Unblocker &copy; 2023</span>
     </footer>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
