--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     />
     <meta name="googlebot" content="index, follow, snippet" />
     <link rel="shortcut icon" content="favicon.ico" />
-    <link rel="stylesheet" href="public/index.css" />
-    <script src="public/uv/uv.bundle.js" defer></script>
-    <script src="public/uv/uv.config.js" defer></script>
-    <script src="public/register-sw.js" defer></script>
-    <script src="public/search.js" defer></script>
-    <script src="public/index.js" defer></script>
+    <link rel="stylesheet" href="index.css" />
+    <script src="uv/uv.bundle.js" defer></script>
+    <script src="uv/uv.config.js" defer></script>
+    <script src="register-sw.js" defer></script>
+    <script src="search.js" defer></script>
+    <script src="server.js" defer></script>
   </head>
 
   <body>
