--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Error 404 | Page does not exist</title>
+    <title>Ultraviolet | Sophisticated Web Proxy</title>
     <meta
       name="description"
       content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
@@ -27,19 +27,52 @@
     <script src="uv/uv.config.js" defer></script>
     <script src="register-sw.js" defer></script>
     <script src="search.js" defer></script>
-    <script src="server.js" defer></script>
+    <script src="index.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Ultraviolet (Web Proxy)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How do I unblock sites using Ultraviolet?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What if Ultraviolet is blocked or not working?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Join the Titanium Network Discord at discord.gg/unblock!"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
 
   <body>
     <div
-      title="Shadow Unblocker Logo"
+      title="Ultraviolet Logo"
       class="flex-center logo-wrapper header-center"
     >
-      <img class="logo" src="uv.png" alt="Shadow Unblocker" />
+      <img class="logo" src="uv.png" alt="Ultraviolet" />
+      <h1>Ultraviolet | TN</h1>
     </div>
     <div class="flex-center desc">
       <p>
-        Shadow Unblocker is highly sophisticated proxy used for evading internet
+        Ultraviolet is highly sophisticated proxy used for evading internet
         censorship.
       </p>
     </div>
@@ -57,7 +90,31 @@
       <pre id="uv-error-code"></pre>
     </div>
     <footer>
-      <span>Shadow Unblocker &copy; 2023</span>
+      <a
+        title="The TitaniumNetwork GitHub organization"
+        href="https://github.com/titaniumnetwork-dev"
+        >TitaniumNetwork</a
+      >
+      <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
+        >Discord</a
+      >
+      <a
+        title="The TompHTTP GitHub organization"
+        href="https://github.com/tomphttp"
+        >TompHTTP</a
+      >
+      <a
+        title="The official deployment repository for Ultraviolet"
+        href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
+        >GitHub</a
+      >
+      <a
+        title="License information"
+        href="credits.html"
+        style="margin-left: auto"
+        >Credits</a
+      >
+      <span>Ultraviolet &copy; TN 2023</span>
     </footer>
   </body>
 </html>
